--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "dependencies": {
         "body-parser": "^1.19.0",
+        "cool-ascii-faces": "^1.3.4",
         "express": "^4.17.1",
         "hbs": "^4.0.5",
         "mysql2": "^1.7.0",
